move patch and starters to a dedicated maven pom module